--- a/src/thanks.html
+++ b/src/thanks.html
@@ -41,19 +41,24 @@
     <section class="thanks-page">
       <div class="thanks-page__inner inner">
         <h2 class="thanks-page__heading">
-          お問い合わせ有難うございました。
+          お問い合わせ
         </h2>
-        <p class="thanks-page__text">
-          2-3営業日以内に返信いたしますので、<br class="u-mobile">
-          しばらくお待ちください。
+        <p class="thanks-page__heading-sub">
+          ご購入・販売に関しましては、<br class="u-mobile">
+          下記よりお気軽にお問い合わせください。
         </p>
-        <p class="thanks-page__text">
-          ※返信がない場合は、お手数ですが、<br class="u-mobile">
-          迷惑メールフォルダの中をご確認おねがいいたします。
-        </p>
-        <!-- /.thanks-page__text -->
-        <!-- /.thanks-page__text -->
-        <!-- /.thanks-page__heading -->
+        <div class="thanks-page__text-wrapper">
+          <p class="thanks-page__text">
+            お問い合わせメールフォーム
+          </p>
+          <!-- /.thanks-page__text -->
+          <p class="thanks-page__text--completed">
+            送信完了しました。ありがとうございました。
+          </p>
+          <!-- /.thanks-page__text--completed -->
+
+        </div>
+        <!-- /.thanks-page__text-wrapper -->
       </div>
       <!-- /.thanks-page__inner inner -->
     </section>
