--- a/src/index.html
+++ b/src/index.html
@@ -301,74 +301,75 @@
 
         <!-- 製品一覧スワイパー -->
         <!-- Slider main container -->
-        <div class="products__swiper swiper js-products-swiper">
-          <!-- Additional required wrapper -->
-          <div class="products__swiper-wrapper swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <a href="#" class="products-card">
-                <figure class="products-card__image">
-                  <img src="./assets/images/common/products-grapes.jpg" alt="マスカットの画像">
-                </figure>
-                <!-- /.products-card__image -->
-                <div class="products-card__body">
-                  <h3 class="products-card__heading">
-                    蓼科ごとう農園オリジナル品種の「シャインマスカット」と「ナガノパープル」500g
-                    蓼科ごとう農園オリジナル品種の「シャインマスカット」と「ナガノパープル」500g
-                    蓼科ごとう農園オリジナル品種の「シャインマスカット」と「ナガノパープル」500g
-                  </h3>
-                  <!-- /.products-card__heading -->
-                  <p class="products-card__price">
-                    ￥ 7,700（税込）
-                  </p>
-                  <!-- /.products-card__price -->
-                </div>
-                <!-- /.products-card__body -->
-              </a>
-              <!-- /.products-card -->
-            </div>
-            <div class="swiper-slide">
-              <a href="#" class="products-card">
-                <figure class="products-card__image">
-                  <img src="./assets/images/common/products-brussels-sprouts.jpg" alt="芽キャベツの画像">
-                </figure>
-                <!-- /.products-card__image -->
-                <div class="products-card__body">
-                  <h3 class="products-card__heading">
-                    標高1,000mオーバーの蓼科高原だからこその、あまあま芽キャベツ!! 1kg
-                  </h3>
-                  <!-- /.products-card__heading -->
-                  <p class="products-card__price">
-                    ￥ 4,200（税込）
-                  </p>
-                  <!-- /.products-card__price -->
-                </div>
-                <!-- /.products-card__body -->
-              </a>
-              <!-- /.products-card -->
-            </div>
-            <div class="swiper-slide">
-              <a href="#" class="products-card">
-                <figure class="products-card__image">
-                  <img src="./assets/images/common/products-strawberries.jpg" alt="いちごの画像">
-                </figure>
-                <!-- /.products-card__image -->
-                <div class="products-card__body">
-                  <h3 class="products-card__heading">
-                    「あいまりん」「サマープリンセス」「サマーリリカル」「よつぼし」など詰め合わせ10パック
-                  </h3>
-                  <!-- /.products-card__heading -->
-                  <p class="products-card__price">
-                    ￥ 4,800（税込）
-                  </p>
-                  <!-- /.products-card__price -->
-                </div>
-                <!-- /.products-card__body -->
-              </a>
-              <!-- /.products-card -->
+        <div class="products__swiper-container">
+          <div class="products__swiper swiper js-products-swiper">
+            <!-- Additional required wrapper -->
+            <div class="products__swiper-wrapper swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <a href="#" class="products-card">
+                  <figure class="products-card__image">
+                    <img src="./assets/images/common/products-grapes.jpg" alt="マスカットの画像">
+                  </figure>
+                  <!-- /.products-card__image -->
+                  <div class="products-card__body">
+                    <h3 class="products-card__heading">
+                      蓼科ごとう農園オリジナル品種の「シャインマスカット」と「ナガノパープル」500g
+                    </h3>
+                    <!-- /.products-card__heading -->
+                    <p class="products-card__price">
+                      ￥ 7,700（税込）
+                    </p>
+                    <!-- /.products-card__price -->
+                  </div>
+                  <!-- /.products-card__body -->
+                </a>
+                <!-- /.products-card -->
+              </div>
+              <div class="swiper-slide">
+                <a href="#" class="products-card">
+                  <figure class="products-card__image">
+                    <img src="./assets/images/common/products-brussels-sprouts.jpg" alt="芽キャベツの画像">
+                  </figure>
+                  <!-- /.products-card__image -->
+                  <div class="products-card__body">
+                    <h3 class="products-card__heading">
+                      標高1,000mオーバーの蓼科高原だからこその、あまあま芽キャベツ!! 1kg
+                    </h3>
+                    <!-- /.products-card__heading -->
+                    <p class="products-card__price">
+                      ￥ 4,200（税込）
+                    </p>
+                    <!-- /.products-card__price -->
+                  </div>
+                  <!-- /.products-card__body -->
+                </a>
+                <!-- /.products-card -->
+              </div>
+              <div class="swiper-slide">
+                <a href="#" class="products-card">
+                  <figure class="products-card__image">
+                    <img src="./assets/images/common/products-strawberries.jpg" alt="いちごの画像">
+                  </figure>
+                  <!-- /.products-card__image -->
+                  <div class="products-card__body">
+                    <h3 class="products-card__heading">
+                      「あいまりん」「サマープリンセス」「サマーリリカル」「よつぼし」など詰め合わせ10パック
+                    </h3>
+                    <!-- /.products-card__heading -->
+                    <p class="products-card__price">
+                      ￥ 4,800（税込）
+                    </p>
+                    <!-- /.products-card__price -->
+                  </div>
+                  <!-- /.products-card__body -->
+                </a>
+                <!-- /.products-card -->
+              </div>
             </div>
           </div>
         </div>
+        <!-- /.products__swiper-container -->
       </div>
       <!-- /.products__inner inner -->
     </section>
@@ -424,6 +425,8 @@
         <!-- /.news__list -->
       </div>
       <!-- /.news__inner inner -->
+      <div class="news__image"></div>
+      <!-- /.news__image -->
     </section>
     <!-- /.news -->
 
@@ -537,6 +540,8 @@
         <!-- /.faq__list faq-list -->
       </div>
       <!-- /.faq__inner inner -->
+      <div class="faq__image"></div>
+      <!-- /.faq__image -->
     </section>
     <!-- /.faq -->
 
@@ -610,6 +615,9 @@
         <!-- /.access__contents-wrapper -->
       </div>
       <!-- /.access__inner inner -->
+      <div class="access__image">
+      </div>
+      <!-- /.access__image -->
     </section>
     <!-- /.access -->
 
