footer 擬似要素画像挿入

--- a/src/index.html
+++ b/src/index.html
@@ -879,9 +879,11 @@
         ©︎ 2019 GOTONOUEN.
       </p>
       <!-- /.footer__copyright -->
-
     </div>
     <!-- /.footer__inner -->
+          <!-- フッター画像 -->
+          <div class="footer__image"></div>
+          <!-- /.footer__image -->
   </footer>
   <!-- /.footer -->
 </body>
