--- a/src/thanks.html
+++ b/src/thanks.html
@@ -90,42 +90,42 @@
       <div class="footer__nav footer-nav">
         <ul class="footer-nav__items">
           <li class="footer-nav__item">
-            <a href="#about" class="footer-nav__link">
+            <a href="index.html#about" class="footer-nav__link">
               この農園について
             </a>
             <!-- /.footer-nav__link -->
           </li>
           <!-- /.footer-nav__item -->
           <li class="footer-nav__item">
-            <a href="#products" class="footer-nav__link">
+            <a href="index.html#products" class="footer-nav__link">
               製品一覧
             </a>
             <!-- /.footer-nav__link -->
           </li>
           <!-- /.footer-nav__item -->
           <li class="footer-nav__item">
-            <a href="#news" class="footer-nav__link">
+            <a href="index.html#news" class="footer-nav__link">
               お知らせ
             </a>
             <!-- /.footer-nav__link -->
           </li>
           <!-- /.footer-nav__item -->
           <li class="footer-nav__item">
-            <a href="#faq" class="footer-nav__link">
+            <a href="index.html#faq" class="footer-nav__link">
               FAQ
             </a>
             <!-- /.footer-nav__link -->
           </li>
           <!-- /.footer-nav__item -->
           <li class="footer-nav__item">
-            <a href="#access" class="footer-nav__link">
+            <a href="index.html#access" class="footer-nav__link">
               アクセス
             </a>
             <!-- /.footer-nav__link -->
           </li>
           <!-- /.footer-nav__item -->
           <li class="footer-nav__item">
-            <a href="#contact" class="footer-nav__link">
+            <a href="index.html#contact" class="footer-nav__link">
               お問い合わせ
             </a>
             <!-- /.footer-nav__link -->
